# bestbestGAA

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  FRAMEWORK_STATUS.md  GAA-Agent-System-Prompt.md  IMPLEMENTATION_SUMMARY_GCP_ILS.md  LICENSE  Proyecto-GAA-2025-1.6.docx  QUICKSTART.md  README.md  RESUMEN_SESION_FINAL_IMPLEMENTACION.md  RESUMEN_SESION_GCP_ILS.md  RESUMEN_SUBIDA_REPOSITORIO.txt  requirements.txt  verify_framework.py
projects/GAA-GCP-ILS-4/: .gitignore  00_START_HERE.md  ANALISIS_INTEGRACION_GAA.md  ANALISIS_VALIDACION_MD.md  CHECKLIST_VALIDACION_FINAL.md  CRITICAL_ERRORS_REPORT.md  EJEMPLOS_EJECUCION_OUTPUT.md  ESTRATEGIA_GENERACION_ALGORITMOS_UNA_SOLA_VEZ.md  EXPERIMENTACION_BOTH_PARA_GAA-GCP-ILS.md  EXPLICACION_DETALLADA_GENERACION_ALGORITMOS_GAA.md  EXPLICACION_GAA.md  FINAL_SUMMARY.md  GAA_EXPLICACION_COMPLETA.md  GAA_IMPLEMENTACION_COMPLETA.md  GAA_STATUS_INTEGRACION.md  GAA_VALIDACION_SISTEMA.md  GUIA_VALIDACION_GAA.py  INDEX.md  INDICE_VALIDACION_GAA.md  INTEGRACION_GAA_EN_EJECUCIONES.md  INTEGRACION_GAA_INSPIRADO_KBP-SA.md  MODULES_REFERENCE.md  NEXT_STEPS.md  OPERATORS_METAHEURISTIC_COMPLETE.md  PATRON_EJECUCION_ALGORITMOS_BOTH.md  PENDIENTES_Y_ESTADO.md  PROJECT_STATUS.md  PROJECT_STATUS_VISUAL.md  PROJECT_STRUCTURE.md  PROPUESTA_UNIFICACION_OUTPUTS.md  QUICK_START_GUIDE.md  README.md  RESUMEN_EJECUTIVO_INTEGRACION_GAA.md  RESUMEN_FINAL_INTEGRACION.md  RESUMEN_OUTPUTS_UNIFICADOS.md  SCRIPT_EXPERIMENTO_COMPLETO.md  SESSION_COMPLETE_FINAL.md  SESSION_SUMMARY.md  SISTEMA_OUTPUTS_IMPLEMENTADO.md  STATUS_FINAL.md  (+21 more)
projects/GAA-GCP-ILS-4/config/: config.yaml
projects/GAA-GCP-ILS-4/core/: __init__.py  evaluation.py  problem.py  solution.py
projects/GAA-GCP-ILS-4/docs/: ADJACENCY_MATRIX_DEEP_ANALYSIS_PART1.md  CONVERGENCE_PLOT_DEEP_ANALYSIS.md  ESTRUCTURA_ORGANIZADA.md  FAMILY_GRAPHS_03_04_DETAILED_EXPLANATION.md  FAMILY_GRAPHS_DEEP_ANALYSIS.md  INDICE.md  INDIVIDUAL_GRAPHS_DEEP_ANALYSIS.md  SOLUTION_FEASIBILITY_ANALYSIS.md
projects/GAA-GCP-ILS-4/experimentation/: __init__.py  statistics.py
projects/GAA-GCP-ILS-4/gaa/: README.md  __init__.py  ast_nodes.py  generator.py  grammar.py  interpreter.py
projects/GAA-GCP-ILS-4/metaheuristic/: __init__.py  ils_core.py  perturbation_schedules.py
projects/GAA-GCP-ILS-4/operators/: __init__.py  constructive.py  improvement.py  perturbation.py  repair.py
(+1372 files in other folders)
